# configtrace

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: diff.rs  main.rs  models.rs  report.rs  scan.rs  utils.rs
src/git/: differ.rs  mod.rs  models.rs  output.rs  repo.rs
src/policy/: evaluator.rs  loader.rs  mod.rs  models.rs  output.rs  parser.rs
src/report/: mod.rs  models.rs  output.rs
src/secrets/: detector.rs  mod.rs  output.rs  patterns.rs
tests/fixtures/clean/: config.yaml
tests/fixtures/policy/: production.yaml
tests/fixtures/policy/sample_configs/: compliant.yaml  database.json  non_compliant.yaml
tests/fixtures/with_secrets/: aws.yaml  database.json  keys.toml
