[package]
name = "configtrace"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "CLI to scan configs, diff changes, and generate audit reports"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
walkdir = "2"
chrono = "0.4"
