[package]
name = "configtrace"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "CLI to scan configs, diff changes, and generate audit reports"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
walkdir = "2"
chrono = "0.4.43"
regex = "1"
lazy_static = "1.4"
termcolor = "1.4"
serde_yaml = "0.9"
toml = "0.9.8"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
